--- a/media.html
+++ b/media.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="header">
-        <h1>Lorem ipsum dolor sit.</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quis.</p>
+        <h1>Try to resize me!</h1>
+        <p>I look a little bit different on different devices</p>
     </div>
     <div class="bar">
         <a href="#">Link</a>
